# cross-subnet-test

./: Cargo.toml  README.md  canister_ids.json  dfx.json
src/ecdsa_example_rust/: Cargo.toml  ecdsa_example.did
src/ecdsa_example_rust/src/: lib.rs
src/publisher/: Cargo.toml
src/publisher/src/: lib.rs  publisher.did
src/subscriber/: Cargo.toml
src/subscriber/src/: lib.rs  subscriber.did
