[package]
name = "ecdsa_example"
version = "0.1.0"
authors = ["paul@thev.net"]
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid = "0.9"
ic-cdk = "0.11"

serde = { version = "1.0", features = ["derive"] }

# log deps
# ic-log = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-log", version = "0.12.0" }

hex = "0.4.3"
sha2 = "0.10.6"
k256 = { version = "0.12.0", features = ["ecdsa"] }
# Enable `custom` feature of k256's getrandom dependency. See lib.rs for more details.
getrandom = { version = "0.2", features = ["custom"] }
