[package]
name = "publisher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
candid = "0.9"
ic-cdk = "0.11"

serde = "1.0.126"
serde_derive = "1.0.126"
# log deps
# ic-log = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-log", tag = "v0.12.x" }
# ic-log = { git = "https://github.com/bitfinity-network/canister-sdk", package = "ic-log", version = "0.12.0" }
